--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,18 +1,31 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-/* Common styles */
-@import url('./reset.css');
-@import url('./base.css');
-@import url('./container.css');
-@import url('./animations.css');
+@import url('./utils/vars.css');
+@import url('./utils/reset.css');
+@import url('./components/gallery.css');
+@import url('./components/form.css');
 
-/* Sections style */
-@import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+.container {
+    min-width: 360px;
+    max-width: 375px;
+    padding: 0;
+    margin: 0 auto;
+    margin-top: 48px;
+}
+
+@media only screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .container {
+        max-width: 1158px;
+    }
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    cursor: url('../img/cursor.svg'), pointer;
+}
